[package]
name = "google_sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
jsonwebtoken = "9.2.0"

[dependencies.reqwest]
version = "0.11.26"
default-features = false
features = ["json", "rustls-tls"]

